--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,3 +67,7 @@ body {
   display: flex;
   height: 100vh;
 }
+
+main {
+  overflow-y: auto;
+}
